# Definitions

./: CMakeLists.txt  README.md
include/Veritas/Definitions/: Architecture.h  Atoms.h  Definitions.h  Platform.h  Types.h
include/Veritas/Definitions/Types/: any.h  any_args.h  any_function.h  any_method.h
src/Types/: any.cpp  any_function.cpp
