CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT("VeritasDefinitions")

IF(TARGET ${PROJECT_NAME})
RETURN()
ENDIF()

AUX_SOURCE_DIRECTORY(src/Types SOURCES)

ADD_LIBRARY(${PROJECT_NAME} ${SOURCES})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC include)
TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PUBLIC -std=c++11)
